--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "lint:fix": "next lint --fix",
-    "format": "prettier --write .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write . --config ./.prettierrc",
     "preview": "vite preview",
     "prepare": "npx husky-init && npx husky set .husky/pre-commit 'npx lint-staged' && husky install"
   },
